--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32163,6 +32163,12 @@ select {
   height: 70vh;
 }
 
+.w-fit-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
