--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -1,3 +1,9 @@
+body {
+	background-color: var(--main-bg);
+	color: var(--main-black);
+	font-size: 16px;
+}
+
 .w-fit-content {
   	width: fit-content;
 }
