--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
+
 body {
 	background-color: var(--main-bg);
 	color: var(--main-black);
 	font-size: 16px;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .w-fit-content {
