--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -3,6 +3,7 @@
   --dark-bg: #3E4144;
   --cta-blue: #04A1DD;
   --cta-green: #24AEA4;
+  --cta-green-hover: #359c95;
   --titles-color: #36474F;
   --red-cta: #F45958;
   --secondary-gray: #676767;
