--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,6 @@
 @import '../css/general.css';
 @import '../css/checkout.css';
 @import '../css/variables.css';
+
+/* Components */
+@import '../css/components/navbar.css'
