--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,6 +5,7 @@
 @import '../css/general.css';
 @import '../css/checkout.css';
 @import '../css/variables.css';
+@import '../css/reset.css';
 
 /* Components */
 @import '../css/components/navbar.css'
