--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -24,3 +24,18 @@ body {
 	list-style: circle;
 	padding: 25px;
 }
+
+.secondary-btn {
+	background-color: var(--gray-button);
+	border-radius: 0.375rem;
+	padding: 7px 10px;
+	align-items: center;
+	display: inline-flex;
+	color: var(--main-black);
+	font-weight: 500;
+}
+
+.secondary-btn:hover {
+	background-color: var(--secondary-gray);
+	color: white;
+}
