--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -15,7 +15,6 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 	font-size: 100%;
-	font: inherit;
 	vertical-align: baseline;
 }
 article, aside, details, figcaption, figure, 
@@ -39,4 +38,10 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+select:focus {
+	outline: 0 !important;
+	cursor: pointer;
+	border: 0 !important;
+	box-shadow: none !important;
 }
