--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -2,6 +2,7 @@
   --main-bg: #F9F9F9;
   --dark-bg: #3E4144;
   --cta-blue: #04A1DD;
+  --cta-blue-hover: #2b95bf;
   --cta-green: #24AEA4;
   --cta-green-hover: #359c95;
   --titles-color: #36474F;
