--- a/public/css/app.css
+++ b/public/css/app.css
@@ -613,11 +613,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 0.5rem;
 }.gap-4{
   gap: 1rem;
+}.gap-x-3{
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
 }.gap-x-6{
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }.gap-y-5{
   row-gap: 1.25rem;
+}.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -773,15 +779,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }.px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }.px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }.py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -791,11 +800,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.py-12{
   padding-top: 3rem;
   padding-bottom: 3rem;
-}.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+}.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }.pt-8{
   padding-top: 2rem;
+}.pl-5{
+  padding-left: 1.25rem;
 }.pb-3{
   padding-bottom: 0.75rem;
 }.pt-1{
@@ -1025,6 +1036,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --main-bg: #F9F9F9;
   --dark-bg: #3E4144;
   --cta-blue: #04A1DD;
+  --cta-blue-hover: #2b95bf;
   --cta-green: #24AEA4;
   --cta-green-hover: #359c95;
   --titles-color: #36474F;
@@ -1065,11 +1077,19 @@ q:before, q:after {
 }table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}select:focus {
+}select:focus, input:focus {
 	outline: 0 !important;
 	cursor: pointer;
 	border: 0 !important;
 	box-shadow: none !important;
+}@media screen and (min-width: 640px) {
+	.container {
+		max-width: 95% !important;
+	}
+}@media screen and (min-width: 1536px) {
+	.container {
+		max-width: 1536px !important;
+	}
 }/* Components */nav {
 	position: -webkit-sticky;
 	position: sticky;
@@ -1170,6 +1190,72 @@ q:before, q:after {
 }@media screen and (max-width: 1024px){
 	.navbar .navbar__buttons .link {
 		display: none !important;
+	}
+}footer {
+  height: 200px;
+  background-color: var(--dark-bg);
+}/* Pages */.main-title-wrapper {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 60px;
+	z-index: 10;
+	background-color: var(--main-bg);
+	max-height: 115px;
+	height: 115px;
+}.main-title-wrapper .main-title {
+	font-size: 35px;
+}.main .main__content-wrapper {
+	flex: 63%;
+}.main .main__map-wrapper {
+	flex: 37%;
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper {
+	border-radius: 5px;
+	box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper input {
+	border: 0 !important;
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper .icon {
+	color: var(--titles-color);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper input::-moz-placeholder {
+	color: var(--titles-color);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper input:-ms-input-placeholder {
+	color: var(--titles-color);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper input::placeholder {
+	color: var(--titles-color);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper .input {
+	flex: 40%;
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper .input:first-of-type {
+	border-right: 3.5px solid var(--gray-button);
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper .search-btn {
+	flex: 1;
+	background-color: var(--cta-blue);
+	color: white;
+	font-weight: 500;
+	border-radius: 0 5px 5px 0;
+}.main .main__content-wrapper .filter-form .filter-form__inputs-wrapper .search-btn:hover {
+	background-color: var(--cta-blue-hover);
+	transition: cubic-bezier(0.645, 0.045, 0.355, 1);
+}.main .main__content-wrapper .filter-form-wrapper {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 175px;
+	z-index: 9;
+	background-color: var(--main-bg);
+}.main #map {
+	position: -webkit-sticky !important;
+	position: sticky !important;
+	top: 175px;
+	z-index: 9;
+	height: 100vh;
+	border-radius: 5px 5px 0 0;
+	box-shadow: 5px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}.listing {
+	height: 400vh;
+	background-color: red;
+	z-index: 1;
+	margin-top: 40px;
+}@media screen and (max-width: 768px){
+	.main .main__content-wrapper .filter-form-wrapper .filter-form .filter-form__inputs-wrapper {
+		flex-direction: column;
 	}
 }.hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
@@ -1346,6 +1432,9 @@ q:before, q:after {
     border-top-width: 0px;
   }.md\:border-l{
     border-left-width: 1px;
+  }.md\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }@media (min-width: 1024px){.lg\:block{
     display: block;
