--- a/resources/css/components/mobile-map-toggler.css
+++ b/resources/css/components/mobile-map-toggler.css
@@ -1,7 +1,8 @@
 .mobile-map-toggler {
   	position: fixed;
-	left: 50%;
-	bottom: 20px;
+	left: 0;
+	transform: translate(calc(50vw - 50%));
+	bottom: 25px;
 	background-color: var(--main-black);
 	font-weight: 500;
 	padding: 10px;
