--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1049,6 +1049,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --secondary-gray: #676767;
   --gray-button: #E7E7E6;
   --main-black: #0E1926;
+  --green-money: #9FDD5D;
 }html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -1210,6 +1211,137 @@ q:before, q:after {
 	z-index: 1004;
 	color: white;
 	box-shadow: 5px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}.job-offer {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	background-color: white;
+	box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
+	padding: 10px 20px;
+	border-radius: 5px;
+	margin-bottom: 20px;
+}.job-offer .job-offer__left {
+	display: flex;
+}.job-offer .job-offer__left .job-offer__info {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-left: 10px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-title {
+	color: var(--titles-color);
+	font-weight: 600;
+	font-size: 20px;
+	margin-bottom: 10px;
+}.job-offer .job-offer__left .company-logo-wrapper{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 5px;
+	border: 1px solid var(--secondary-gray);
+	background-color: var(--secondary-gray);
+	height: 70px;
+	width: 70px;
+}.job-offer .job-offer__left .company-logo-wrapper img {
+	width: 100%;
+	-o-object-fit: cover;
+	   object-fit: cover;
+	border-radius: 5px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-box {
+	display: flex;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-box .job-offer__info-company {
+	display: flex;
+	color: var(--secondary-gray);
+	font-size: 14px;
+	margin-right: 20px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-box .job-offer__info-location {
+	display: flex;
+	color: var(--secondary-gray);
+	font-size: 14px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-box .job-offer__info-location span {
+	margin-left: 5px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__info-box .job-offer__info-company span {
+	margin-left: 5px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__tags {
+	display: flex;
+	margin-top: 10px;
+}.job-offer .job-offer__left .job-offer__info .job-offer__tags .job-offer__tags-tag{
+	background-color: rgba(4, 159, 220, 0.1);
+	color: var(--cta-blue);
+	font-weight: 500;
+	border-radius: 5px;
+	margin-right: 10px;
+	font-size: 14px;
+	padding: 2px 10px;
+}.job-offer .job-offer__right {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}.job-offer .job-offer__right .job-offer__right-top {
+	display: flex;
+}.job-offer .job-offer__right .job-offer__right-top .job-offer__right-salary {
+	color: var(--green-money);
+	font-weight: 500;
+	margin-right: 20px;
+}.job-offer .job-offer__right .job-offer__right-bottom {
+	display: flex;
+	align-items: flex-end;
+}.job-offer .job-offer__right .job-offer__right-bottom .job-offer__right-tag {
+	font-weight: 600;
+	color: var(--secondary-gray);
+	margin-left: 20px;
+	margin-right: 10px;
+}.job-offer .job-offer__right .job-offer__right-bottom .job-offer__right-time {
+	color: var(--secondary-gray);
+}.job-offer .job-offer__right .job-offer__right-tech {
+	display: flex;
+}.job-offer .job-offer__right .tech-box-main {
+	display: flex;
+	max-width: 30px;
+	min-width: 30px;
+	max-height: 30px;
+	min-height: 30px;
+	align-items: center;
+	justify-content: center;
+	margin-left: 10px;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper {
+	display: flex;
+ flex-grow: 1;
+    min-width: 0px;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper .tech-box {
+	display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: flex-start;
+    min-width: 0px;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper .tech-box .tech-box__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 0px;
+    text-decoration: none;
+    border-radius: 50%;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper .tech-box .tech-box__icon-wrapper { 
+	background: linear-gradient(-90deg, rgb(65, 173, 250), rgb(21, 124, 252));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: none;
+    text-transform: none;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 5px;
+    position: relative;
+	filter: none;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper .tech-box .tech-box__icon-wrapper svg { 
+	width: 35px;
+    fill: rgb(255, 255, 255);
+	color: white;
+}.job-offer .job-offer__right .tech-box-main .tech-box-wrapper .tech-box .tech-box__label { 
+    font-size: 11px;
+    line-height: 15px;
+    text-align: center;
+    margin-top: 5px;
 }/* Pages */.main-title-wrapper {
 	position: -webkit-sticky;
 	position: sticky;
@@ -1267,10 +1399,10 @@ q:before, q:after {
 	z-index: 9;
 	background-color: var(--main-bg);
 }.listing {
-	height: 400vh;
-	background-color: red;
 	z-index: 1;
 	margin-top: 40px;
+	display: flex;
+	flex-direction: column;
 }.main .main__content-wrapper .filter-form .tech-box-main {
 	display: flex;
 	max-width: 50px;
