--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,7 @@
 @import '../css/components/navbar.css';
 @import '../css/components/footer.css';
 @import '../css/components/mobile-map-toggler.css';
+@import '../css/components/job-offer.css';
 
 /* Pages */
 @import '../css/pages/homepage.css';
