show dynamically tech filters

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1475,7 +1475,6 @@ q:before, q:after {
     text-decoration: none;
     border-radius: 50%;
 }.main .main__content-wrapper .filter-form .tech-box-main .tech-box-wrapper .tech-box .tech-box__icon-wrapper { 
-	background: linear-gradient(-90deg, rgb(65, 173, 250), rgb(21, 124, 252));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1494,15 +1493,14 @@ q:before, q:after {
     box-shadow: rgb(228 232 240) 0px 0px 0px 5px;
     color: rgb(255, 255, 255);
     fill: rgb(255, 255, 255);
-}.main .main__content-wrapper .filter-form .tech-box-main .tech-box-wrapper .tech-box .tech-box__icon-wrapper svg { 
+}.main .main__content-wrapper .filter-form .tech-box-main .tech-box-wrapper .tech-box .tech-box__icon-wrapper .tech-box__icon { 
 	width: 35px;
-    fill: rgb(255, 255, 255);
-	color: white;
 }.main .main__content-wrapper .filter-form .tech-box-main .tech-box-wrapper .tech-box .tech-box__label { 
-    font-size: 11px;
+    font-size: 12px;
     line-height: 15px;
     text-align: center;
     margin-top: 5px;
+		color: var(--secondary-gray);
 }.main .main__content-wrapper .filter-form .more-filters-btn {
 	background-color: var(--gray-button);
 	min-height: 40px;
