hover effet job offer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1225,6 +1225,7 @@ q:before, q:after {
 	padding: 10px 20px;
 	border-radius: 5px;
 	margin-bottom: 20px;
+	transition: transform .4s;
 }.job-offer .job-offer__left {
 	display: flex;
 }.job-offer .job-offer__left .job-offer__info {
@@ -1388,6 +1389,10 @@ q:before, q:after {
 	.job-offer .job-offer__right .job-offer__right-bottom .job-offer__right-tag {
 		margin-left: 20px;
 		margin-right: 10px;
+	}
+
+	.job-offer:hover {
+		transform: scale(1.03);
 	}
 }/* Pages */.main-title-wrapper {
 	position: -webkit-sticky;
