more filters modal

--- a/resources/css/components/footer.css
+++ b/resources/css/components/footer.css
@@ -1,4 +1,6 @@
 footer {
-  height: 200px;
-  background-color: var(--dark-bg);
+  	background-color: var(--dark-bg);
+	color: white;
+	z-index: 1009;
+	position: relative;
 }
