--- a/public/css/app.css
+++ b/public/css/app.css
@@ -430,6 +430,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.mx-auto{
   margin-left: auto;
   margin-right: auto;
+}.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }.my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -461,6 +464,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.75rem;
 }.mt-5{
   margin-top: 1.25rem;
+}.mb-6{
+  margin-bottom: 1.5rem;
+}.mb-4{
+  margin-bottom: 1rem;
 }.-mr-0\.5{
   margin-right: -0.125rem;
 }.-mr-0{
@@ -477,12 +484,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: -0.5rem;
 }.mt-6{
   margin-top: 1.5rem;
-}.mb-6{
-  margin-bottom: 1.5rem;
 }.mt-1{
   margin-top: 0.25rem;
-}.mb-4{
-  margin-bottom: 1rem;
 }.mr-3{
   margin-right: 0.75rem;
 }.mr-6{
@@ -593,10 +596,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   list-style-type: disc;
 }.grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
 }.grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }.flex-col{
   flex-direction: column;
 }.flex-wrap{
@@ -611,6 +614,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }.justify-between{
   justify-content: space-between;
+}.gap-8{
+  gap: 2rem;
 }.gap-2{
   gap: 0.5rem;
 }.gap-4{
@@ -629,6 +634,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.gap-x-8{
   -moz-column-gap: 2rem;
        column-gap: 2rem;
+}.gap-x-5{
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -637,6 +645,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}.space-x-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }.space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -649,6 +661,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}.self-center{
+  align-self: center;
 }.overflow-auto{
   overflow: auto;
 }.overflow-hidden{
@@ -845,6 +859,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }.text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1037,6 +1054,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.secondary-btn:hover {
 	background-color: var(--secondary-gray);
 	color: white;
+}.primary-btn {
+	color: white;
+	background-color: var(--cta-blue);
+	padding: 7px 10px;
+	font-weight: 500;
+	border-radius: 0.375rem;
+	align-items: center;
+	display: inline-flex;
+}.primary-btn:hover {
+	background-color: var(--cta-blue-hover);
 }:root {
   --main-bg: #F9F9F9;
   --dark-bg: #3E4144;
@@ -1202,8 +1229,10 @@ q:before, q:after {
 		display: none !important;
 	}
 }footer {
-  height: 200px;
-  background-color: var(--dark-bg);
+  	background-color: var(--dark-bg);
+	color: white;
+	z-index: 1009;
+	position: relative;
 }.mobile-map-toggler {
   	position: fixed;
 	left: 0;
@@ -1390,7 +1419,7 @@ q:before, q:after {
 		margin-left: 20px;
 		margin-right: 10px;
 	}
-
+}@media screen and (min-width: 801px){
 	.job-offer:hover {
 		transform: scale(1.03);
 	}
@@ -1524,11 +1553,61 @@ q:before, q:after {
 	position: fixed;
 	left: 50%;
 	top: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1101;
 	background-color: var(--main-bg);
 	border-radius: 5px;
 	box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
-	padding: 15px;
+	min-width: 50vw;
+	min-height: 50vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}.filter-modal .filter-modal__header {
+	padding: 25px 35px;
+	border-bottom: 2px solid var(--gray-button);
+}.filter-modal .filter-modal__header .close {
+	cursor: pointer;
+}.filter-modal .filter-modal__body {
+	padding: 25px 35px;
+	border-bottom: 2px solid var(--gray-button);
+}.filter-modal .filter-modal__body .filter-modal__body-section {
+	padding: 15px 0;
+}.filter-modal .filter-modal__body .filter-modal__body-section:not(:last-of-type) {
+	border-bottom: 2px solid var(--gray-button);
+}.filter-modal .filter-modal__body .filter-modal__body-section button {
+	color: var(--secondary-gray);
+	border-radius: 0.375rem;
+	border: 1px solid var(--secondary-gray) !important;
+	padding: 10px 10px;
+}.filter-modal .filter-modal__body .filter-modal__body-section button.active {
+	color: var(--cta-blue) !important;
+	font-weight: 500;
+	border-radius: 0.375rem;
+	border: 1px solid var(--cta-blue) !important;
+	padding: 10px 10px;
+}.filter-modal .filter-modal__body .filter-modal__body-section button:hover {
+	color: var(--cta-blue) !important;
+	border: 1px solid var(--cta-blue) !important;
+}.filter-modal .filter-modal__body .filter-modal__body-section .title {
+	font-weight: 500;
+	font-size: 17px;
+	margin-bottom: 15px;
+}.filter-modal .filter-modal__body .filter-modal__body-section .slider {
+	margin-top: 40px;
+}.filter-modal .filter-modal__body .filter-modal__body-section .slider-connect {
+	background-color: var(--cta-blue) !important;
+}.filter-modal .filter-modal__body .filter-modal__body-section .slider-tooltip {
+	background-color: var(--cta-blue) !important;
+	border-color: var(--cta-blue) !important;
+}.filter-modal .filter-modal__footer {
+	padding: 25px 35px;
+}.filter-modal .filter-modal__footer button {
+	font-size: 17px;
+	padding: 12px 12px;
+}.filter-modal .filter-modal__header-title {
+	font-size: 20px;
+	font-weight: 500;
 }.overlay {
 	position: fixed;
 	top: 0;
@@ -1599,6 +1678,14 @@ q:before, q:after {
 		width: 100%;
 		height: 100%;
 	}
+
+	.filter-modal {
+		min-width: 100vw;
+		min-height: 100vh;
+		height: 100vh;
+		width: 100vw;
+		border-radius: 0 !important;
+	}
 }@media screen and (min-width: 1024px) {
 	.main #map {
 		position: -webkit-sticky !important;
@@ -1643,6 +1730,9 @@ q:before, q:after {
 }.hover\:text-gray-900:hover{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}.hover\:underline:hover{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }.focus\:z-10:focus{
   z-index: 10;
 }.focus\:border-blue-300:focus{
@@ -1727,9 +1817,14 @@ q:before, q:after {
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
   }
-}@media (min-width: 640px){.sm\:-my-px{
+}@media (min-width: 640px){.sm\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }.sm\:-my-px{
     margin-top: -1px;
     margin-bottom: -1px;
+  }.sm\:mt-0{
+    margin-top: 0px;
   }.sm\:ml-10{
     margin-left: 2.5rem;
   }.sm\:ml-6{
@@ -1748,6 +1843,8 @@ q:before, q:after {
     max-width: 28rem;
   }.sm\:flex-1{
     flex: 1 1 0%;
+  }.sm\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }.sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.sm\:flex-row{
@@ -1760,6 +1857,8 @@ q:before, q:after {
     justify-content: center;
   }.sm\:justify-between{
     justify-content: space-between;
+  }.sm\:gap-6{
+    gap: 1.5rem;
   }.sm\:space-x-6 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1770,6 +1869,8 @@ q:before, q:after {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }.sm\:rounded-lg{
     border-radius: 0.5rem;
+  }.sm\:p-6{
+    padding: 1.5rem;
   }.sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -1777,15 +1878,23 @@ q:before, q:after {
     padding-top: 0px;
   }.sm\:text-left{
     text-align: left;
+  }.sm\:text-center{
+    text-align: center;
   }.sm\:text-right{
     text-align: right;
   }
 }@media (min-width: 768px){.md\:ml-4{
     margin-left: 1rem;
+  }.md\:mb-0{
+    margin-bottom: 0px;
+  }.md\:flex{
+    display: flex;
   }.md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.md\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }.md\:justify-between{
+    justify-content: space-between;
   }.md\:border-t-0{
     border-top-width: 0px;
   }.md\:border-l{
@@ -1794,7 +1903,10 @@ q:before, q:after {
     padding-left: 0px;
     padding-right: 0px;
   }
-}@media (min-width: 1024px){.lg\:block{
+}@media (min-width: 1024px){.lg\:my-8{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }.lg\:block{
     display: block;
   }.lg\:flex{
     display: flex;
