--- a/resources/css/pages/homepage.css
+++ b/resources/css/pages/homepage.css
@@ -184,13 +184,93 @@
 	position: fixed;
 	left: 50%;
 	top: 50%;
+	transform: translate(-50%, -50%);
 	z-index: 1101;
 	background-color: var(--main-bg);
 	border-radius: 5px;
 	-webkit-box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
 	-moz-box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
 	box-shadow: 2px 4px 4px 0px rgba(0, 0, 0, 0.25);
-	padding: 15px;
+	min-width: 50vw;
+	min-height: 50vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.filter-modal .filter-modal__header {
+	padding: 25px 35px;
+	border-bottom: 2px solid var(--gray-button);
+}
+
+.filter-modal .filter-modal__header .close {
+	cursor: pointer;
+}
+
+.filter-modal .filter-modal__body {
+	padding: 25px 35px;
+	border-bottom: 2px solid var(--gray-button);
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section {
+	padding: 15px 0;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section:not(:last-of-type) {
+	border-bottom: 2px solid var(--gray-button);
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section button {
+	color: var(--secondary-gray);
+	border-radius: 0.375rem;
+	border: 1px solid var(--secondary-gray) !important;
+	padding: 10px 10px;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section button.active {
+	color: var(--cta-blue) !important;
+	font-weight: 500;
+	border-radius: 0.375rem;
+	border: 1px solid var(--cta-blue) !important;
+	padding: 10px 10px;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section button:hover {
+	color: var(--cta-blue) !important;
+	border: 1px solid var(--cta-blue) !important;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section .title {
+	font-weight: 500;
+	font-size: 17px;
+	margin-bottom: 15px;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section .slider {
+	margin-top: 40px;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section .slider-connect {
+	background-color: var(--cta-blue) !important;
+}
+
+.filter-modal .filter-modal__body .filter-modal__body-section .slider-tooltip {
+	background-color: var(--cta-blue) !important;
+	border-color: var(--cta-blue) !important;
+}
+
+.filter-modal .filter-modal__footer {
+	padding: 25px 35px;
+}
+
+.filter-modal .filter-modal__footer button {
+	font-size: 17px;
+	padding: 12px 12px;
+}
+
+.filter-modal .filter-modal__header-title {
+	font-size: 20px;
+	font-weight: 500;
 }
 
 .overlay {
@@ -270,6 +350,14 @@
 	.main #map {
 		width: 100%;
 		height: 100%;
+	}
+
+	.filter-modal {
+		min-width: 100vw;
+		min-height: 100vh;
+		height: 100vh;
+		width: 100vw;
+		border-radius: 0 !important;
 	}
 }
 
